# nictools

./: setup.cfg  setup.py
doc/source/: conf.py
lib/nictools/: saaclean.py
nictools/: CalTempFromBias.py  SP_FirstDerivatives.py  SP_LeastSquares.py  __init__.py  finesky.py  makemedmask.py  nic_rem_persist.py  opusutil.py  persutil.py  puftcorr.py  rnlincor.py  saaclean.py  tfbutil.py
trunk/: setup.cfg
