[metadata]
name = nictools
version = 1.1.0.dev
author = Vicki Laidler, David Grumm
author-email = help@stsci.edu
summary = Python Tools for NICMOS Data
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python 
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist =
    stsci.tools (>=3.1.dev)
    stsci.convolve (>=2.1.dev)
    stsci.ndimage (>=0.10.0.dev)
    pyfits (>=3.1.dev)
    numpy (>=1.5.1)

[files]
packages = nictools

[global]
setup-hooks =
    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook

[easy_install]
find-links = http://stsdas.stsci.edu/download/packages
